<resources>
    <string name="app_name">my HolyBible</string>
    <string name="bible">성경</string>
    <string name="oldBible">구약</string>
    <string name="newBible">신약</string>
    <string name="hymn">찬송가</string>
    <string name="goBack">←</string>
    <string name="nowBible">데살로니가전서2장</string>
    <string name="nextBible">왕하12</string>
    <string name="cevBible">CEV</string>
    <string name="prevBible">열왕33</string>
    <string name="agpBible">AGP</string>
    <string name="setting">setting</string>
    <string name="riopapa_face">riopapa face</string>
    <string name="wanna_quit">이젠 끝낼까요?</string>
    <string name="sure_to_quit">그래요\n 다음에 봅시다</string>
    <string name="blank" />
    <string name="minus">"\u25BC"</string>
    <string name="plus">"\u25B2"</string>
    <string name="number">12</string>
    <string name="bibleName_size">이름</string>
    <string name="scripture_size">본문</string>
    <string name="keyword_size">키워드</string>
    <string name="crossing_size">관주</string>
    <string name="depth_size">검색장수</string>
    <string name="verse_space_size">절간격</string>
    <string name="show_hymn_sheetFirst">악보를위에</string>
    <string name="show_hymn_sheet">찬송악보</string>
    <string name="show_hymn_lyric">찬송가사</string>
    <string name="hymn_lyric_size">가사</string>
    <string name="keep_screen_on">화면 켜두기</string>
    <string name="bookmark_saved">"저장된 성경 목록"</string>
    <string name="bibleBookMark">성경 북마크</string>
    <string name="sheet_lyric">악보+가사</string>
    <string name="lyric_sheet">가사+악보</string>
    <string name="sheet_only">악보만</string>
    <string name="lyric_only">가사만</string>
    <string name="speed_slowly">천천히</string>
    <string name="speed_quickly">빨리</string>
    <string name="pitch_down">낮게</string>
    <string name="pitch_up">높게</string>
    <string name="about">이 성경찬송 앱 업데이트 이력 . .</string>
    <string name="background_black">바탕을 검게</string>

</resources>
