<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/setting"
        android:layout_width="40dp"
        android:layout_height="40dp"
        style="@style/exitButton"
        android:scaleX="1"
        android:scaleY="1"
        android:layout_marginStart="0sp"
        android:contentDescription="@string/setting"
        android:src="@mipmap/icon_setting"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/agpBible"/>


    <TextView
        android:id="@+id/agpBible"
        style="@style/MenuStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/agpBible"
        android:layout_marginStart="0sp"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/setting"
        app:layout_constraintRight_toLeftOf="@+id/oldBible" />

    <TextView
        android:id="@+id/oldBible"
        style="@style/MenuStyle"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/oldBible"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/agpBible"
        app:layout_constraintRight_toLeftOf="@+id/newBible"/>

    <TextView
        android:id="@+id/newBible"
        style="@style/MenuStyle"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/newBible"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/oldBible"
        app:layout_constraintRight_toLeftOf="@id/hymn" />

    <TextView
        android:id="@+id/hymn"
        style="@style/MenuStyle"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/hymn"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/newBible"
        app:layout_constraintRight_toLeftOf="@id/cevBible" />

    <TextView
        android:id="@+id/cevBible"
        style="@style/MenuStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cevBible"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/hymn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>