<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--        style="@style/MenuStyle"-->

    <ImageView
        android:id="@+id/speak"
        android:layout_width="40dp"
        android:layout_height="28dp"
        style="@style/MenuStyle"
        app:layout_constraintHorizontal_weight="1"
        android:src="@mipmap/speak_on"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/leftAction"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/leftAction"
        style="@style/MenuStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/prevBible"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/speak"
        app:layout_constraintRight_toLeftOf="@+id/currBible"/>

    <TextView
        android:id="@+id/currBible"
        style="@style/MenuStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nowBible"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/leftAction"
        app:layout_constraintRight_toLeftOf="@id/rightAction" />

    <TextView
        android:id="@+id/rightAction"
        style="@style/MenuStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nextBible"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/currBible"
        app:layout_constraintRight_toLeftOf="@id/bottomEnd" />

    <TextView
        android:id="@+id/bottomEnd"
        style="@style/MenuStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toLeftOf="@id/rightAction" />

</android.support.constraint.ConstraintLayout>