<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/searchView"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/screenBodyColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="4dp"
            android:layout_margin="4dp"
            android:background="@drawable/setting_border"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="성경 찾기"
            android:layout_gravity="center"
            android:textSize="28sp" />

        <!-- search bible -->
        <LinearLayout
            android:gravity="center"
            android:layout_margin="2dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/search_from"
                android:layout_width="0dp"
                android:layout_weight="9"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="마가복음 6 부터"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/search_down"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textColor="#012345"
                android:textStyle="bold"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/search_depth_size"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/search_up"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:textColor="#012345"
                android:textStyle="bold"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/search_depth"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/setText"
                android:layout_height="wrap_content"
                android:text="장"
                android:layout_gravity="center"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >
            <EditText
                android:id="@+id/search_text"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:inputType="text"
                android:gravity="center"
                android:selectAllOnFocus="true"
                android:layout_height="wrap_content"
                android:hint="찾을 문장"
                android:textColor="#012345"
                android:textStyle="bold"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/find"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                style="@style/exitButton"
                app:layout_constraintHorizontal_weight="2"
                android:src="@mipmap/search" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/searched_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            >
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</ScrollView>
